# Det2d

./: README.md  cats.json  pyproject.toml
src/det2d/: __init__.py  categories.py  convert.py  fill.py  keys.py  loader.py  mask.py  read.py  stack.py  verify.py  window.py
testing/: 20240716-150900_20240716-163915_test.det2d.json  20240716-150900_20240716-163915_test.vipr.json  test_det2d.py
